--- a/src/sqiel/SqielOberflaeche.form
+++ b/src/sqiel/SqielOberflaeche.form
@@ -115,13 +115,10 @@
                           </Group>
                           <Component id="TFAMax" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="RBAdministrator" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="70" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="RBAdministrator" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
