--- a/src/sqiel/SqielOberflaeche.form
+++ b/src/sqiel/SqielOberflaeche.form
@@ -103,7 +103,7 @@
                           <Component id="BNeuesSpiel" alignment="0" min="-2" pref="91" max="-2" attributes="0"/>
                           <Component id="BNeueRunde" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="TFAMin" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="LAMin" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -140,7 +140,7 @@
                       <Component id="BNeueRunde" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="LAMin" min="-2" max="-2" attributes="0"/>
